--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,10 +1,7 @@
 ---
 name: Release Go Binaries
 
-on:
-  push:
-    tags:
-      - 'v*'
+on: [push, pull_request]
 
 jobs:
   build:
@@ -45,6 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    if: github.repository == 'acristoffers/tmux-tui' && github.event_name == 'push' && github.ref_type == 'tag' && startsWith(github.ref_name, 'v')
 
     steps:
       - name: Download binaries
